--- a/Group Report/Lab 2/L2-phiho267-zijfe244.Rmd
+++ b/Group Report/Lab 2/L2-phiho267-zijfe244.Rmd
@@ -8,7 +8,7 @@ output:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, out.width = "400px")
 ```
 
 \newpage
@@ -28,7 +28,7 @@ rm(list=ls())
 ```
 
 
-#1. Linear and polynomial regression
+# 1. Linear and polynomial regression
 The dataset *TempLinkoping.txt* contains daily temperatures (in Celcius degrees) at $Malmsl \"a tt$, Link$\"o$ping over the course of the year 2016 (366 days since 2016 was a leap year). The response variable is temp and the covariate is
 
 $$ \ time = \frac{\ the \ number \ of \ days \ since \ beginning \ of \ year}{366}  $$
@@ -36,7 +36,7 @@ The task is to perform a Bayesian analysis of a quadratic regression
 
 $$ \ temp = \beta_0 + \beta_1 \cdot \ time + \beta_2 \cdot \ time^2 + \varepsilon \overset{\text{iid}}{\sim} \mathcal{N}(0,\sigma^2)$$
 
-##(a) Determining the prior distribution of the model parameters. 
+## (a) Determining the prior distribution of the model parameters. 
 Use the conjugate prior for the linear regression model. Your task is to set the prior hyperparameters $\mu_0, \Omega_0, \upsilon_0$ and $\sigma^2_0 = 1$ to sensible values. Start with $\mu_0 = -10, 100, -100)^T$ ,$\Omega_0 =0.01 \cdot I_3, , \upsilon_0 = 4, \sigma^2_0 = 1$. Check if this prior agrees with your prior opinions by simulating draws from the joint prior of all parameters and for every draw compute the regression curve. This gives a collection of regression curves, one for each draw from the prior. Do the collection of curves look reasonable? If not, change the prior hyperparameters until the collection of prior regression curves do agree with your prior beliefs about the regression curve. [Hint: the R package *mvtnorm* will be handy. And use your $Inv - \chi^2$
 simulator from Lab 1.]
 
@@ -134,14 +134,14 @@ plot1a.mdf <- ggplot(data.1a)+
   ggtitle("Modified") +
   theme(legend.position = "none")
 
-# plot(arrangeGrob(plot1a.ori, plot1a.mdf, ncol = 2))
-plot1a.ori
-plot1a.mdf
+plot(arrangeGrob(plot1a.ori, plot1a.mdf, nrow = 2))
+# plot1a.ori
+# plot1a.mdf
 ```
 
 
 
-##(b) Write a program that simulates from the joint posterior distribution 
+## (b) Write a program that simulates from the joint posterior distribution 
 of $\beta_0, \beta_1, \beta_2$ and $\sigma^2$. Plot the marginal posteriors for each parameter as a histogram. Also produce another figure with a scatter plot of the temperature data and overlay a curve for the posterior median of the regression function $f(\ time) = \beta_0 + \beta_1 \cdot \ time, \beta_2 \cdot \ time^2$, computed for every value of *time*. Also overlay curves for the lower 2.5% and upper 97.5% posterior credible interval for $f(\ time)$. That is, compute the 95% equal tail posterior probability intervals for every value of time and then connect the lower and upper limits of the interval by curves. Does the interval bands contain most of the data points? Should they?
 
 ```{r}
@@ -205,7 +205,7 @@ There exists variance when we predict Y using our regression model,
 and the corresponding intervals describing the condience of model is
 predective interval.
 
-##(c) Locate the time with the highest expected temperature
+## (c) Locate the time with the highest expected temperature
 It is of interest to locate the *time* with the highest expected temperature (that is, the time where $f(\ time)$ is maximal). Let??s call this value $\widetilde{x}$. Use the simulations in b) to simulate from the posterior distribution of $\widetilde{x}$.
 [Hint: the regression curve is a quadratic. You can find a simple formula for $\widetilde{x}$ given $\beta_0, \beta_1$ and $\beta_2$.]
 
@@ -223,7 +223,7 @@ ggplot(data.1c) +
   geom_line(aes(x = time,y = pred_highest), color = "black", linetype = "solid", size = 1)
 ```
 
-##(d) Polynomial model of order 7
+## (d) Polynomial model of order 7
 Say now that you want to *estimate a polynomial model of order 7*, but you suspect that higher order terms may not be needed, and you worry about overfitting. Suggest a suitable prior that mitigates this potential problem. You do not need to compute the posterior, just write down your prior. [Hint: the task is to specify $\mu_0$ and $\Omega_0$ in a smart way.]
 
 \newpage
@@ -233,16 +233,16 @@ Say now that you want to *estimate a polynomial model of order 7*, but you suspe
 rm(list=ls())
 ```
 
-#2. Posterior approximation for classification with logistic regression
+# 2. Posterior approximation for classification with logistic regression
 The dataset **WomenWork.dat** contains *n* = 200 observations (i.e. women) on the following nine variables:
 
-```{r, echo=FALSE, out.width="350px", out.height="300px", fig.align = "center"}
+```{r, eval = FALSE,echo=FALSE, out.width="350px", out.height="300px", fig.align = "center"}
 knitr::include_graphics("lab2_table_ex2.png")
 ```
 
 
 
-##(a) Consider the logistic regression
+## (a) Consider the logistic regression
 
 $$\ Pr(y = 1\mid \boldsymbol x) = \frac{\exp(\boldsymbol x^T\beta)}{1+\exp(\boldsymbol x^T\beta)}$$
 
@@ -266,7 +266,7 @@ summary(glmModel)
 ```
 
 
-##(b) Now the fun begins. 
+## (b) Now the fun begins. 
 Our goal is to approximate the posterior distribution of the 8-dim parameter vector $\beta$ with a multivariate normal distribution
 
 $$ \beta \mid \boldsymbol y, \boldsymbol X \sim  \mathcal{N} \big( \widetilde{\beta}, J^{-1}_{\boldsymbol y}(\widetilde{\beta})  \big)$$
@@ -467,7 +467,7 @@ postCov[par1,par2]/(sqrt(postCov[par1,par1])*sqrt(postCov[par2,par2]))
 
 
 
-##(c) Simulates from the predictive distribution
+## (c) Simulates from the predictive distribution
 Write a function that simulates from the predictive distribution of the response variable in a logistic regression. Use your normal approximation from 2(b). Use that function to simulate and plot the predictive distribution for the *Work* variable for a 40 year old woman, with two children (3 and 9 years old), 8 years of education, 10 years of experience. and a husband with an income of 10. [Hint: the R package *mvtnorm* will again be handy. And remember my discussion on how Bayesian prediction can be done by simulation.]
 
 
